assets/css/style.css
/*Defined the margin and padding as 0 to negate browser defaults*/
* {
    margin: 0;
    padding: 0;
}

/*Defined height of body and html as 100% so that .not-footer can have a height of 100%, too.
Defined the minimum width of the body and html so that the right side of the header doesn't
vanish when the user zooms in*/
html, body {
    height: 100%;
    min-width: 1024px;
}

/*Linked a background image for the body*/
body {
    background-image: url("../images/background.png");
}

/*Defined font family and size for h1*/
h1 {
    font-family: 'Georgia', Times, 'Times New Roman', serif;
    font-size: 32px;
}

/*Defined font size, color, spacing and family for standard paragraph text
and gave it padding so that it isn't at the edge of .container's border*/
p {
    padding: 0 30px 0 30px;
    font-size: 18px;
    color: #777777;
    line-height: 2;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
}

.right-link {
    font-size: 18px;
    color: #777777;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    text-decoration: none;
}

#index-link {
    padding-right: 20px;
}

#portfolio-link {
    padding: 0 20px 0 20px;
    border-left: 1px solid #cccccc;
}

#contact-link {
    padding-left: 20px;
    border-left: 1px solid #cccccc;
}

/*Set a minimum height of 100% for the contents above the footer to help
with placing the footer*/
.not-footer {
    min-height: 100%;
    margin-bottom: -65px;
}

header {
    width: 100%;
    background: #ffffff;
    overflow: hidden;
    border-bottom: 2px solid #cccccc;
    margin-bottom: 40px;
    height: 90px;
}

.header-text {
    width: 960px;
    margin: auto;
}

.header-heading-container {
    float: left;
    position: relative;
    top: 25px;
}

.header-heading {
    font-family: 'Georgia', Times, "Times New Roman", serif;
    background-color: #4aaaa5;
    height: 92px;
    padding: 100% 30px 35px 30px;
    color: #ffffff;
}

.header-right {
    list-style: none;
    float: right;
    padding-top: 36px;
    background: #ffffff;
}

.header-link {
    display: inline-block;
}

.header-width {
    width: 960px;
    margin: auto;
}

.container {
    width: 960px;
    margin: auto;
    padding-bottom: 20px;
    background-color: #ffffff;
    border: 2px solid #dddddd;
}

.h1-below {
    padding: 30px 0 30px 0;
    color: #4aaaa5;
    border-bottom: 3px solid #dddddd;
    margin: 0 30px 30px 30px;
}

#profile-picture {
    padding: 9px 30px 30px;
    float: left;
}

.push {
    height: 160px;
}

footer {
    background: #666666;
    border-top: 8px solid #4aaaa5;
    height: 65px;
}

/*Made the color of the font different from that of the other non-header
text because otherwise it didn't stand out enough on the darker background
and looked wrong to me*/
.copyright {
    text-align: center;
    font-size: 12px;
    color: #dddddd;
    margin-top: 38px;
    background: #666666;
}

.row {
    padding: 12px 0 38px;
}

.portfolio-project {
    padding: 0 30px;
}

.project-container {
    width: 200px;
    position: relative;
    display: inline-block;
    margin-right: 150px;
}

.project-title {
    margin-left: 30px;
    padding: 18px 0;
    width: 300px;
    font-size: 24px;
    font-weight: normal;
    font-family: 'Georgia', Times, "Times New Roman", serif;
    text-align: center;
    color: #ffffff;
    background-color: #4aaaa5;
    position: absolute;
    bottom: 12px;
    z-index: 1;
}

#contact-form-container {
    margin-left: 30px;
}

#contact-form {
    font-size: 20px;
    color: #777777;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    line-height: 2;
}

input, textarea {
    color: #777777;
    font-size: 18px;
    width: 872px;
    line-height: 1.5;
    padding: 4.5px 12px;
    border: 2px solid #dddddd;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
}

#form-message {
    height: 252px;
    resize: none;
}

#form-submit {
    padding: 15px 40px;
    margin-bottom: 12.5px;
    background-color: #4aaaa5;
    color: #ffffff;
    font-size: 20px;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    border: .5px solid #dddddd;
}

.form-spacer {
    height: 12px;
    visibility: hidden;
}

@media screen and (max-width: 980px) {

    html, body {
        min-width: 768px;
        max-width: 980px;
    }

    header {
        height: 85px;
    }

    h1 {
        font-size: 28px;
    }

    .h1-below {
        margin-bottom: 22.5px;
    }

    .header-right {
        padding-top: 33.5px;
    }

    /*Changed the font size here so that it aligns with the
    profile picture in an aesthetically pleasing way*/
    .right-link, p {
        font-size: 16px;
    }

    /*redefined the width of these two classes so that
    the logo and navbar still sit neatly within the
    screen's parameters*/
    .header-text, .header-width {
        width: 870px;
    }
    
    /*Reduced the width of the container and its margins
    (and added div of the same size it'd previously had
    around it further up the page/in the html) so that
    it would align with the logo on the left side of the
    page and leave empty space on the right (as in the
    homework photo)*/
    .container {
        width: 600px;
        margin: auto auto auto 0;
    }

    /*Reduced width of inputs and text area so they remained
    aligned with the contents of .container*/
    input, textarea {
        width: 518px;
        font-size: 13px;
        padding: 4.5px 9px;
    }

    #contact-form {
        font-size: 17.5px;
        line-height: 1.75;
    }

    #form-message {
        height: 182px;
        resize: auto;
    }

    #form-submit {
        font-size: 17.5px;
        padding: 10px 28px;
    }

    footer {
        height: 90px;
    }

    /*Removed the margin that had been pushing the text to
    the bottom of the footer, then gave it a line-height
    equal to the heigh of the footer so it would be vertically
    aligned in the middle like in the homework photo*/
    .copyright {
        margin-top: auto;
        line-height: 90px;
        font-size: 11px;
    }
    
    .portfolio-picture {
        width: 250px;
        height: auto;
    }
    
    .project-container {
        margin-right: 86px;
    }
    
    .project-title {
        font-size: 22px;
        padding: 16px 0;
        width: 250px;
    }
}

@media screen and (max-width: 768px) {

    html, body {
        min-width: 640px;
        max-width: 768px;
    }

    .right-link, p {
        font-size: 17px;
    }

    .header-text, .header-width {
        width: 700px;
    }

    .header-right {
        padding-top: 32.5px;
    }

    #index-link {
        padding-right: 16px;
    }

    #portfolio-link {
        padding: 0 16px;
    }

    #contact-link {
        padding-left: 16px;
    }

    .container {
        width: 700px;
    }

    #profile-picture {
        padding-bottom: 20px;
    }

    .row {
        padding: 18px 0 20px;
    }

    .portfolio-picture {
        width: 300px;
    }

    .project-container {
        margin-right: 136px;
    }

    #project-container-bottom {
        margin-bottom: 10px;
    }

    .project-title {
        width: 300px;
    }

    input, textarea {
        width: 618px;
    }
}

@media screen and (max-width: 640px) {

    html, body {
        max-width: 640px;
        min-width: 1px;
    }

    h1 {
        font-size: 26px;
    }

    .right-link, p {
        font-size: 15.5px;
    }

    header {
        overflow: visible;
    }

    .header-text {
        width: 100%;
    }
    
    .header-width {
        width: 90%;
    }

    .container {
        width: 100%;
        margin-top: 75px;
    }

    .header-heading-container {
        float: none;
        width: 100%;
        display: inline-block;
        vertical-align: top;
    }

    .header-heading {
        position: absolute;
        top: -25px;
        display: block;
        text-align: center;
        height: 55px;
        width: 100%;
        padding: 20px 0 0;
    }

    .header-right {
        float: none;
        margin-top: 50px;
        display: inline-block;
        vertical-align: bottom;
        width: 100%;
        text-align: center;
        padding-top: 28px;
        padding-bottom: 20px;
        border-bottom: 2px solid #cccccc;
    }

    input, textarea {
        width: 100%;
        border: 2px solid #dddddd;
        background-clip: padding-box;
    }

    #contact-form-container {
        box-sizing: border-box;
        padding-right: 52px;
    }

    .project-title, .portfolio-picture {
        margin: 0 30px;
    }

    .portfolio-picture {
        width: 100%;
    }

    .project-title {
        padding: 20px 0;
        width: auto;
        right: 0;
        left: 0;
    }

    .row {
        padding: 0;
    }

    .portfolio-project {
        padding: 0;
    }

    #last-row {
        margin-bottom: 25px;
    }

    .project-container {
        margin-right: 0;
        width: 100%;
        padding: 18px 60px 0 0;
        box-sizing: border-box;
        margin-bottom: 27px;
    }
}

